--- a/frontend/allpack/invitation/inve.html
+++ b/frontend/allpack/invitation/inve.html
@@ -198,102 +198,102 @@
                 <!-- Gallery Item 1 -->
                 <div class="gallery-item">
                     <img src="/frontend/allpack/invitation/invdar/17.jpg" alt="Elegant Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/17.jpg')">
-                    <div class="caption">Elegant Design - Perfect for Weddings</div>
+                    <div class="caption">Timeless beauty for your special day.</div>
                 </div>
                 <!-- Gallery Item 2 -->
                 <div class="gallery-item">
                     <img src="/frontend/allpack/invitation/invdar/2.jpg" alt="Modern Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/2.jpg')">
-                    <div class="caption">Modern Style - Trendy and Chic</div>
+                    <div class="caption">Sleek and sophisticated for the contemporary couple.</div>
                 </div>
                 <!-- Gallery Item 3 -->
                 <div class="gallery-item">
                     <img src="/frontend/allpack/invitation/invdar/18.jpg" alt="Classic Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/18.jpg')">
-                    <div class="caption">Classic Theme - Timeless Elegance</div>
+                    <div class="caption">A touch of tradition, a lifetime of memories.</div>
                 </div>
                 <!-- Gallery Item 4 -->
                 <div class="gallery-item">
                     <img src="/frontend/allpack/invitation/invdar/4.jpg" alt="Luxury Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/4.jpg')">
-                    <div class="caption">Luxury Design - Opulent and Grand</div>
+                    <div class="caption">Opulence and grandeur for a royal celebration.</div>
                 </div>
                 <!-- Gallery Item 5 -->
                 <div class="gallery-item">
                     <img src="/frontend/allpack/invitation/invdar/5.jpg" alt="Minimalist Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/5.jpg')">
-                    <div class="caption">Minimalist Style - Simple and Clean</div>
+                    <div class="caption">Less is more: simplicity meets elegance.</div>
                 </div>
                 <!-- Gallery Item 6 -->
                 <div class="gallery-item">
                     <img src="/frontend/allpack/invitation/invdar/6.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/6.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                    <div class="caption">Old-world charm for a timeless celebration.</div>
                 </div>
-                 <!-- Gallery Item 7 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/7.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/7.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 7 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/7.jpg" alt="Romantic Flair" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/7.jpg')">
+                    <div class="caption">Whispers of love in every detail.</div>
                 </div>
-                 <!-- Gallery Item 8 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/8.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/8.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 8 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/8.jpg" alt="Rustic Elegance" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/8.jpg')">
+                    <div class="caption">Nature-inspired beauty for a heartfelt celebration.</div>
                 </div>
-                 <!-- Gallery Item 9 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/9.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/9.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 9 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/9.jpg" alt="Bohemian Vibes" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/9.jpg')">
+                    <div class="caption">Free-spirited and full of love.</div>
                 </div>
-                 <!-- Gallery Item 10 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/10.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/10.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 10 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/10.jpg" alt="Garden Glamour" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/10.jpg')">
+                    <div class="caption">Blooms and beauty for a magical day.</div>
                 </div>
-                 <!-- Gallery Item 11 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/11.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/11.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 11 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/11.jpg" alt="Golden Touch" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/11.jpg')">
+                    <div class="caption">Shimmering elegance for a golden celebration.</div>
                 </div>
-                 <!-- Gallery Item 12 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/12.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/12.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 12 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/12.jpg" alt="Enchanted Forest" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/12.jpg')">
+                    <div class="caption">A fairy tale come to life.</div>
                 </div>
-                 <!-- Gallery Item 13 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/13.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 13 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/13.jpg" alt="Coastal Chic" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
+                    <div class="caption">Breezy and beautiful, like your love story.</div>
                 </div>
-                 <!-- Gallery Item 14 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/14.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/14.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 14 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/14.jpg" alt="Winter Wonderland" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/14.jpg')">
+                    <div class="caption">Snow-kissed dreams for a magical day.</div>
                 </div>
-                 <!-- Gallery Item 15 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/15.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/15.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 15 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/15.jpg" alt="Art Deco Glam" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/15.jpg')">
+                    <div class="caption">Roaring twenties, timeless love.</div>
                 </div>
-                 <!-- Gallery Item 16 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/16.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/16.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 16 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/16.jpg" alt="Tropical Paradise" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/16.jpg')">
+                    <div class="caption">Sunshine and smiles for a tropical celebration.</div>
                 </div>
-                 <!-- Gallery Item 17 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/1.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/1.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 17 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/1.jpg" alt="Whimsical Wonder" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/1.jpg')">
+                    <div class="caption">Playful and magical, just like your love.</div>
                 </div>
-                 <!-- Gallery Item 18 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/13.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 18 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/13.jpg" alt="Ethereal Beauty" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
+                    <div class="caption">Dreamy and delicate, a vision of love.</div>
                 </div>
-                 <!-- Gallery Item 19 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/19.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/19.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 19 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/19.jpg" alt="Regal Affair" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/19.jpg')">
+                    <div class="caption">Fit for royalty, a celebration of love.</div>
                 </div>
-                 <!-- Gallery Item 20 -->
-                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/20.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/20s.jpg')">
-                    <div class="caption">Vintage Theme - Nostalgic Charm</div>
+                <!-- Gallery Item 20 -->
+                <div class="gallery-item">
+                    <img src="/frontend/allpack/invitation/invdar/20.jpg" alt="Celestial Charm" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/20.jpg')">
+                    <div class="caption">Love written in the stars.</div>
                 </div>
             </div>
         </div>
