--- a/frontend/allpack/st/st.html
+++ b/frontend/allpack/st/st.html
@@ -21,9 +21,47 @@
     <link rel="stylesheet" href="/frontend/css/navbar.css">
     <link rel="stylesheet" href="/frontend/css/footer.css">
     <!-- Custom Styles -->
-
-
-
+    <style>
+        .wedding-dress-section {
+            padding: 60px 0;
+            background-color: #f8f9fa;
+        }
+        .wedding-dress-section h2 {
+            text-align: center;
+            margin-bottom: 40px;
+            font-size: 2.5rem;
+            color: #333;
+        }
+        .dress-card {
+            background: white;
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+        .dress-card:hover {
+            transform: translateY(-10px);
+        }
+        .dress-card img {
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            width: 100%;
+            height: auto;
+        }
+        .dress-card .card-body {
+            padding: 20px;
+            text-align: center;
+        }
+        .dress-card .card-title {
+            font-size: 1.5rem;
+            color: #333;
+            margin-bottom: 10px;
+        }
+        .dress-card .card-text {
+            font-size: 1rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -66,8 +104,164 @@
         </div>
     </nav>
 
-
-
+    <!-- Wedding Dress Section -->
+    <section class="wedding-dress-section">
+        <div class="container">
+            <h2 data-aos="fade-up">Explore Our Wedding Dress Collection</h2>
+            <div class="row">
+                <!-- Dress 1 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d1.jpg" alt="Elegant A-Line Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant A-Line Dress</h5>
+                            <p class="card-text">Perfect for a classic and timeless look. This A-line dress features intricate lace detailing and a flowing train.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 2 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d2.jpg" alt="Modern Mermaid Gown">
+                        <div class="card-body">
+                            <h5 class="card-title">Modern Mermaid Gown</h5>
+                            <p class="card-text">A sleek and sophisticated option for the modern bride. This mermaid gown hugs your curves and flares out at the bottom.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 3 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d4.jpg" alt="Bohemian Chic Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Bohemian Chic Dress</h5>
+                            <p class="card-text">For the free-spirited bride, this bohemian dress features flowing layers, delicate embroidery, and a relaxed fit.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 4 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d8.jpg" alt="Classic Ball Gown">
+                        <div class="card-body">
+                            <h5 class="card-title">Classic Ball Gown</h5>
+                            <p class="card-text">A timeless choice with a voluminous skirt and fitted bodice, perfect for a fairytale wedding.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 5 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d6.jpg" alt="Lace Sheath Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Lace Sheath Dress</h5>
+                            <p class="card-text">A minimalist yet elegant design with full lace coverage, ideal for a chic and modern bride.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 6 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d9.jpg" alt="Princess Tulle Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Princess Tulle Dress</h5>
+                            <p class="card-text">A dreamy dress with layers of soft tulle and a fitted bodice, perfect for a romantic wedding.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 7 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/tr1.jpg" alt="Vintage Lace Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Vintage Lace Dress</h5>
+                            <p class="card-text">Inspired by vintage designs, this dress features intricate lace patterns and a classic silhouette.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 8 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/tr2.jpg" alt="Satin A-Line Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Satin A-Line Dress</h5>
+                            <p class="card-text">A luxurious satin dress with a flattering A-line cut, perfect for a sophisticated bride.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 9 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/tr4.jpg" alt="Off-Shoulder Ball Gown">
+                        <div class="card-body">
+                            <h5 class="card-title">Off-Shoulder Ball Gown</h5>
+                            <p class="card-text">A stunning off-shoulder design with a voluminous skirt, perfect for a dramatic entrance.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 10 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/tr5.jpg" alt="Embroidered Mermaid Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Embroidered Mermaid Dress</h5>
+                            <p class="card-text">A glamorous mermaid dress with intricate embroidery, perfect for a red-carpet look.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 11 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/tr6.jpg" alt="Chiffon A-Line Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Chiffon A-Line Dress</h5>
+                            <p class="card-text">A lightweight and flowy chiffon dress, ideal for a beach or outdoor wedding.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 12 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d12m.jpg" alt="Beaded Ball Gown">
+                        <div class="card-body">
+                            <h5 class="card-title">Beaded Ball Gown</h5>
+                            <p class="card-text">A dazzling ball gown with intricate beadwork, perfect for a glamorous wedding.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 13 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d5m.jpg" alt="Lace Fit-and-Flare Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Lace Fit-and-Flare Dress</h5>
+                            <p class="card-text">A flattering fit-and-flare design with delicate lace, perfect for a romantic wedding.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 14 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d13.jpg" alt="Tulle Ball Gown">
+                        <div class="card-body">
+                            <h5 class="card-title">Tulle Ball Gown</h5>
+                            <p class="card-text">A dreamy tulle ball gown with a fitted bodice, perfect for a fairytale wedding.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Dress 15 -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="dress-card">
+                        <img src="/frontend/allpack/st/datadress/d14.jpeg" alt="Satin Mermaid Dress">
+                        <div class="card-body">
+                            <h5 class="card-title">Satin Mermaid Dress</h5>
+                            <p class="card-text">A sleek satin mermaid dress with a modern silhouette, perfect for a chic bride.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
@@ -115,5 +309,8 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"
     ></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
