--- a/frontend/allpack/st/st.html
+++ b/frontend/allpack/st/st.html
@@ -38,6 +38,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
+            margin-top: 20px; /* Added top margin for all cards */
         }
         .dress-card:hover {
             transform: translateY(-10px);
@@ -182,7 +183,7 @@
                 <!-- Dress 8 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/tr2.jpg" alt="Satin A-Line Dress">
+                        <img src="/frontend/allpack/st/datadress/tr4.jpg" alt="Satin A-Line Dress">
                         <div class="card-body">
                             <h5 class="card-title">Satin A-Line Dress</h5>
                             <p class="card-text">A luxurious satin dress with a flattering A-line cut, perfect for a sophisticated bride.</p>
@@ -192,7 +193,7 @@
                 <!-- Dress 9 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/tr4.jpg" alt="Off-Shoulder Ball Gown">
+                        <img src="/frontend/allpack/st/datadress/tr2.jpg" alt="Off-Shoulder Ball Gown">
                         <div class="card-body">
                             <h5 class="card-title">Off-Shoulder Ball Gown</h5>
                             <p class="card-text">A stunning off-shoulder design with a voluminous skirt, perfect for a dramatic entrance.</p>
@@ -232,7 +233,7 @@
                 <!-- Dress 13 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d5m.jpg" alt="Lace Fit-and-Flare Dress">
+                        <img src="/frontend/allpack/st/datadress/d13.jpg" alt="Lace Fit-and-Flare Dress">
                         <div class="card-body">
                             <h5 class="card-title">Lace Fit-and-Flare Dress</h5>
                             <p class="card-text">A flattering fit-and-flare design with delicate lace, perfect for a romantic wedding.</p>
@@ -242,7 +243,7 @@
                 <!-- Dress 14 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d13.jpg" alt="Tulle Ball Gown">
+                        <img src="/frontend/allpack/st/datadress/d5m.jpg" alt="Tulle Ball Gown">
                         <div class="card-body">
                             <h5 class="card-title">Tulle Ball Gown</h5>
                             <p class="card-text">A dreamy tulle ball gown with a fitted bodice, perfect for a fairytale wedding.</p>
