--- a/frontend/allpack/st/st.html
+++ b/frontend/allpack/st/st.html
@@ -264,6 +264,24 @@
         </div>
     </section>
 
+<!-- Description Section -->
+<section class="description-section py-5">
+    <div class="container">
+        <h2 class="text-center mb-4" data-aos="fade-up">About Our Wedding Dress Collection</h2>
+        <p class="lead text-center" data-aos="fade-up" data-aos-delay="100">
+            Discover our curated collection of elegant wedding dresses, designed to make you feel beautiful and confident. From classic A-line gowns to modern mermaid styles, our dresses feature stunning fabrics and intricate details to suit every bride’s vision.
+        </p>
+        <p class="lead text-center" data-aos="fade-up" data-aos-delay="200">
+            Browse our dresses effortlessly with high-quality images and descriptions, enhanced by smooth animations. Whether you prefer timeless or contemporary styles, we have something perfect for your big day.
+        </p>
+        <p class="lead text-center" data-aos="fade-up" data-aos-delay="300">
+            Our goal is to make your dress search easy, enjoyable, and memorable as you find the one that perfectly reflects your style and love story.
+        </p>
+    </div>
+</section>
+
+
+
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
         <div class="container">
