--- a/frontend/allpack/makeup/beaty.html
+++ b/frontend/allpack/makeup/beaty.html
@@ -79,145 +79,148 @@
         <div class="container">
             <h2 class="text-center mb-5">Makeup Services</h2>
             <div class="row">
+                <!-- Picture 1 -->
                 <div class="col-md-4">
                     <div class="makeup-card">
                         <img src="/frontend/allpack/makeup/makeupdata/5.jpg" alt="Bridal Makeup">
-                        <h3 class="text-center mt-3">Bridal Makeup</h3>
-                        <p class="text-center">Our bridal makeup services ensure you look stunning on your special day.</p>
+                        <h3 class="text-center mt-3">Timeless Bridal Glam</h3>
+                        <p class="text-center">Radiate elegance on your special day with our classic bridal makeup, designed to make you feel like a queen.</p>
                     </div>
                 </div>
+                <!-- Picture 2 -->
                 <div class="col-md-4">
                     <div class="makeup-card">
                         <img src="/frontend/allpack/makeup/makeupdata/1.jpg" alt="Bridesmaid Makeup">
-                        <h3 class="text-center mt-3">Bridesmaid Makeup</h3>
-                        <p class="text-center">Perfect makeup for your bridesmaids to complement your bridal look.</p>
+                        <h3 class="text-center mt-3">Chic Bridesmaid Look</h3>
+                        <p class="text-center">Complement the bride with a fresh and stylish makeup look that enhances your natural beauty.</p>
                     </div>
                 </div>
+                <!-- Picture 3 -->
                 <div class="col-md-4">
                     <div class="makeup-card">
                         <img src="/frontend/allpack/makeup/makeupdata/2.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <h3 class="text-center mt-3">Romantic Engagement Glow</h3>
+                        <p class="text-center">Capture the magic of your engagement with a soft, glowing makeup look that shines in every photo.</p>
                     </div>
                 </div>
-                <!--4-->
+                <!-- Picture 4 -->
                 <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/4.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/4.jpg" alt="Natural Makeup">
+                        <h3 class="text-center mt-3">Effortless Natural Beauty</h3>
+                        <p class="text-center">Enhance your features with a natural makeup look that’s perfect for a fresh and understated vibe.</p>
                     </div>
                 </div>
-                 <!--5-->
-                 <div class="col-md-4">
+                <!-- Picture 5 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/17.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/17.jpg" alt="Glamorous Evening Makeup">
+                        <h3 class="text-center mt-3">Dazzling Evening Glam</h3>
+                        <p class="text-center">Turn heads at your wedding reception with bold, glamorous makeup that exudes confidence.</p>
                     </div>
                 </div>
-                 <!--6-->
-                 <div class="col-md-4">
+                <!-- Picture 6 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/6.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/6.jpg" alt="Soft Smokey Eyes">
+                        <h3 class="text-center mt-3">Sultry Smokey Eyes</h3>
+                        <p class="text-center">Add a touch of mystery to your look with soft, smokey eyes that are perfect for any wedding event.</p>
                     </div>
                 </div>
-                 <!--7-->
-                 <div class="col-md-4">
+                <!-- Picture 7 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/7.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/7.jpg" alt="Bold Red Lips">
+                        <h3 class="text-center mt-3">Classic Red Lip Elegance</h3>
+                        <p class="text-center">Make a statement with timeless red lips that never go out of style.</p>
                     </div>
                 </div>
-                 <!--8-->
-                 <div class="col-md-4">
+                <!-- Picture 8 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/8.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/8.jpg" alt="Golden Goddess">
+                        <h3 class="text-center mt-3">Golden Goddess Glow</h3>
+                        <p class="text-center">Shine like the sun with golden-toned makeup that adds warmth and radiance to your look.</p>
                     </div>
                 </div>
-                 <!--9-->
-                 <div class="col-md-4">
+                <!-- Picture 9 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/9.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/9.jpg" alt="Pastel Dream">
+                        <h3 class="text-center mt-3">Pastel Dream Makeup</h3>
+                        <p class="text-center">Embrace soft pastel hues for a dreamy and romantic makeup look.</p>
                     </div>
                 </div>
-                 <!--10-->
-                 <div class="col-md-4">
+                <!-- Picture 10 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/10.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/10.jpg" alt="Boho Chic">
+                        <h3 class="text-center mt-3">Boho Chic Vibes</h3>
+                        <p class="text-center">Channel free-spirited beauty with a boho-inspired makeup look that’s perfect for outdoor weddings.</p>
                     </div>
                 </div>
-                 <!--11-->
-                 <div class="col-md-4">
+                <!-- Picture 11 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/11.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/11.jpg" alt="Metallic Magic">
+                        <h3 class="text-center mt-3">Metallic Magic</h3>
+                        <p class="text-center">Add a touch of shimmer and shine with metallic accents that catch the light beautifully.</p>
                     </div>
                 </div>
-                 <!--12-->
-                 <div class="col-md-4">
+                <!-- Picture 12 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/12.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/12.jpg" alt="Ethereal Fairy">
+                        <h3 class="text-center mt-3">Ethereal Fairy Glow</h3>
+                        <p class="text-center">Feel like a fairy tale princess with soft, glowing makeup that’s pure magic.</p>
                     </div>
                 </div>
-                 <!--13-->
-                 <div class="col-md-4">
+                <!-- Picture 13 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/13.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/13.jpg" alt="Vintage Glam">
+                        <h3 class="text-center mt-3">Vintage Glamour</h3>
+                        <p class="text-center">Step back in time with vintage-inspired makeup that’s both elegant and timeless.</p>
                     </div>
                 </div>
-                 <!--14-->
-                 <div class="col-md-4">
+                <!-- Picture 14 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/14.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/14.jpg" alt="Modern Minimalist">
+                        <h3 class="text-center mt-3">Modern Minimalist</h3>
+                        <p class="text-center">Less is more with this sleek and sophisticated minimalist makeup look.</p>
                     </div>
                 </div>
-                 <!--15-->
-                 <div class="col-md-4">
+                <!-- Picture 15 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/15.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/15.jpg" alt="Dewy Fresh">
+                        <h3 class="text-center mt-3">Dewy Fresh Glow</h3>
+                        <p class="text-center">Achieve a fresh, dewy complexion that looks effortlessly radiant.</p>
                     </div>
                 </div>
-                 <!--16-->
-                 <div class="col-md-4">
+                <!-- Picture 16 -->
+                <div class="col-md-4">
                     <div class="makeup-card">
                         <img src="/frontend/allpack/makeup/makeupdata/16.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <h3 class="text-center mt-3">Engagement Bliss</h3>
+                        <p class="text-center">Celebrate your love story with a makeup look that’s as unforgettable as your engagement.</p>
                     </div>
                 </div>
-                <!--17-->
+                <!-- Picture 17 -->
                 <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/120893190_973012863108733_8725879130663401463_n.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/120893190_973012863108733_8725879130663401463_n.jpg" alt="Soft Glam">
+                        <h3 class="text-center mt-3">Soft Glam Makeup</h3>
+                        <p class="text-center">A subtle yet stunning look that’s perfect for any wedding occasion.</p>
                     </div>
                 </div>
-                <!--18-->
+                <!-- Picture 18 -->
                 <div class="col-md-4">
                     <div class="makeup-card">
-                        <img src="/frontend/allpack/makeup/makeupdata/67825203_496963187735458_2562195465454632371_n.jpg" alt="Engagement Makeup">
-                        <h3 class="text-center mt-3">Engagement Makeup</h3>
-                        <p class="text-center">Look your best for your engagement photos with our professional makeup services.</p>
+                        <img src="/frontend/allpack/makeup/makeupdata/67825203_496963187735458_2562195465454632371_n.jpg" alt="Classic Elegance">
+                        <h3 class="text-center mt-3">Classic Elegance</h3>
+                        <p class="text-center">Timeless beauty with a touch of sophistication for your special day.</p>
                     </div>
                 </div>
             </div>
