--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -98,7 +98,7 @@
       <img src="/assethome/dres.jpg" class="card-img-top" alt="...">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">Style</h5>
-        <a href="#" class="btn btn-primary">Read More</a>
+        <a href="/frontend/allpack/st/st.html" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
