--- a/frontend/allpack/mc/mc.html
+++ b/frontend/allpack/mc/mc.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professional Master of Ceremony services for weddings and events. Book now for an unforgettable experience.">
+    <meta name="keywords" content="wedding MC, event host, wedding planner, professional MC">
+    <meta name="author" content="Wedding Planner">
     <title>Master of Ceremony - Wedding Planner</title>
     <!-- Bootstrap CSS -->
     <link
@@ -21,7 +24,12 @@
     <link rel="stylesheet" href="/frontend/css/navbar.css">
     <link rel="stylesheet" href="/frontend/css/footer.css">
     <style>
-        /* Custom Styles for MC Page */
+        /* Custom Styles */
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
+
+        /* Hero Section */
         .mc-hero {
             background: url('/frontend/allpack/mc/mcdata/background.jpg') no-repeat center center/cover;
             height: 70vh;
@@ -30,45 +38,195 @@
             justify-content: center;
             color: white;
             text-align: center;
+            position: relative;
+            overflow: hidden;
         }
+
+        .hero-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8));
+            z-index: 1;
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 2;
+        }
+
         .mc-hero h1 {
             font-size: 4rem;
             font-weight: bold;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+            animation: fadeInDown 1.5s ease-in-out;
         }
+
+        .mc-hero .lead {
+            font-size: 1.5rem;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+            animation: fadeInUp 1.5s ease-in-out;
+        }
+
+        .mc-hero .btn {
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        /* Content Section */
         .mc-content {
-            padding: 60px 0;
+            padding: 80px 0;
         }
-        .mc-card {
-            transition: transform 0.3s ease;
+
+        .mc-content h2 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 20px;
         }
-        .mc-card:hover {
-            transform: scale(1.05);
+
+        .mc-content .lead {
+            font-size: 1.2rem;
+            line-height: 1.8;
         }
-        .mc-card img {
-            border-radius: 10px;
+
+        .mc-content ul {
+            list-style: none;
+            padding: 0;
         }
+
+        .mc-content ul li {
+            margin-bottom: 10px;
+            font-size: 1.1rem;
+        }
+
+        .mc-content ul li i {
+            margin-right: 10px;
+            color: #28a745;
+        }
+
+        /* Testimonials Section */
         .mc-testimonials {
             background: #f8f9fa;
-            padding: 60px 0;
+            padding: 80px 0;
         }
+
+        .mc-testimonials h2 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 40px;
+            text-align: center;
+        }
+
         .testimonial-card {
             background: white;
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
         }
-        /* Carousel Custom Styles */
-        .carousel-item img {
+
+        .testimonial-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .testimonial-card p {
+            font-size: 1.1rem;
+            line-height: 1.8;
+        }
+
+        .testimonial-card .text-end {
+            font-weight: bold;
+            color: #333;
+        }
+
+        /* Gallery Section */
+        .mc-gallery {
+            padding: 80px 0;
+        }
+
+        .mc-gallery h2 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 40px;
+            text-align: center;
+        }
+
+        .mc-gallery img {
             border-radius: 10px;
-            height: 400px;
-            object-fit: cover;
+            transition: transform 0.3s ease;
         }
-        .carousel-control-prev-icon,
-        .carousel-control-next-icon {
-            background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 50%;
-            padding: 10px;
+
+        .mc-gallery img:hover {
+            transform: scale(1.05);
+        }
+
+        /* Footer */
+        footer {
+            background: #343a40;
+            color: white;
+            padding: 40px 0;
+        }
+
+        footer h5 {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        footer p, footer ul {
+            font-size: 1rem;
+            line-height: 1.8;
+        }
+
+        footer ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        footer ul li {
+            margin-bottom: 10px;
+        }
+
+        footer ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        footer ul li a:hover {
+            color: #28a745;
+        }
+
+        /* Animations */
+        @keyframes fadeInDown {
+            0% {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
         }
     </style>
 </head>
@@ -115,7 +273,12 @@
 
     <!-- MC Hero Section -->
     <section class="mc-hero" data-aos="fade-down">
-        <h1>Master of Ceremony</h1>
+        <div class="hero-overlay"></div>
+        <div class="hero-content text-center">
+            <h1 class="display-3 fw-bold">Master of Ceremony</h1>
+            <p class="lead fs-4">Make your wedding unforgettable with our professional MC services.</p>
+            <a href="booking.html" class="btn btn-primary btn-lg mt-3">Book Now</a>
+        </div>
     </section>
 
     <!-- MC Content Section -->
@@ -189,6 +352,24 @@
                         <p>"Our guests are still talking about how amazing the MC was. Highly recommend!"</p>
                         <p class="text-end"><strong>- Laura & David</strong></p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- MC Gallery Section -->
+    <section class="mc-gallery">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Gallery</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <img src="/frontend/allpack/mc/mcdata/ran1.jpg" class="img-fluid rounded" alt="MC Image 1">
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(14).jpg" class="img-fluid rounded" alt="MC Image 2">
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <img src="/frontend/allpack/mc/mcdata/mc.jpg" class="img-fluid rounded" alt="MC Image 3">
                 </div>
             </div>
         </div>
