--- a/frontend/allpack/mc/mc.html
+++ b/frontend/allpack/mc/mc.html
@@ -21,8 +21,6 @@
     />
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
     <style>
         /* Custom Styles */
         body {
@@ -103,6 +101,36 @@
         .mc-content ul li i {
             margin-right: 10px;
             color: #28a745;
+        }
+
+        /* Carousel Section */
+        #mcCarousel {
+            height: 400px; /* Fixed height for the carousel */
+            overflow: hidden; /* Prevent overflow */
+            border-radius: 10px; /* Rounded corners */
+        }
+
+        .carousel-inner, .carousel-item {
+            height: 100%; /* Ensure inner elements take full height */
+        }
+
+        .carousel-item img {
+            width: 100%; /* Ensure images take full width */
+            height: 100%; /* Ensure images take full height */
+            object-fit: cover; /* Scale images to cover the container */
+            border-radius: 10px; /* Rounded corners */
+        }
+
+        .carousel-control-prev,
+        .carousel-control-next {
+            width: 5%; /* Adjust the width of the control buttons */
+        }
+
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            border-radius: 50%; /* Circular buttons */
+            padding: 10px; /* Padding for better visibility */
         }
 
         /* Testimonials Section */
@@ -298,12 +326,6 @@
                             <div class="carousel-item">
                                 <img src="/frontend/allpack/mc/mcdata/mc.jpg" class="d-block w-100" alt="MC Image 3">
                             </div>
-                            <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(10).jpg" class="d-block w-100" alt="MC Image 3">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/inganzo.jpg" class="d-block w-100" alt="MC Image 3">
-                            </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#mcCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -374,6 +396,41 @@
             </div>
         </div>
     </section>
+
+
+    <!-- MC FAQ Section -->
+    <section class="mc-faq py-5">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Frequently Asked Questions</h2>
+            <div class="accordion" id="faqAccordion">
+                <div class="accordion-item" data-aos="fade-up" data-aos-delay="100">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What is included in the MC service?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Our MC service includes a customized script, professional hosting, and coordination with your event timeline.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item" data-aos="fade-up" data-aos-delay="200">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Can the MC speak multiple languages?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Yes, our MC is fluent in English, Spanish, and French.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
