--- a/test2.html
+++ b/test2.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professional Master of Ceremony services for weddings and events. Book now for an unforgettable experience.">
+    <meta name="keywords" content="wedding MC, event host, wedding planner, professional MC">
+    <meta name="author" content="Wedding Planner">
     <title>Master of Ceremony - Wedding Planner</title>
     <!-- Bootstrap CSS -->
     <link
@@ -70,6 +73,12 @@
             border-radius: 50%;
             padding: 10px;
         }
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -116,6 +125,8 @@
     <!-- MC Hero Section -->
     <section class="mc-hero" data-aos="fade-down">
         <h1>Master of Ceremony</h1>
+        <p class="lead">Make your wedding unforgettable with our professional MC services.</p>
+        <a href="booking.html" class="btn btn-primary btn-lg mt-3">Book Now</a>
     </section>
 
     <!-- MC Content Section -->
@@ -136,10 +147,10 @@
                                 <img src="/frontend/allpack/mc/mcdata/mc.jpg" class="d-block w-100" alt="MC Image 3">
                             </div>
                             <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(10).jpg" class="d-block w-100" alt="MC Image 3">
+                                <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(10).jpg" class="d-block w-100" alt="MC Image 4">
                             </div>
                             <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/inganzo.jpg" class="d-block w-100" alt="MC Image 3">
+                                <img src="/frontend/allpack/mc/mcdata/inganzo.jpg" class="d-block w-100" alt="MC Image 5">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#mcCarousel" data-bs-slide="prev">
@@ -167,6 +178,66 @@
         </div>
     </section>
 
+    <!-- MC Pricing Section -->
+    <section class="mc-pricing py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Our Packages</h2>
+            <div class="row">
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="card text-center">
+                        <div class="card-header bg-primary text-white">
+                            <h3>Basic Package</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">$500</h4>
+                            <ul class="list-unstyled">
+                                <li>Up to 4 hours of service</li>
+                                <li>Customized script</li>
+                                <li>Basic sound system</li>
+                            </ul>
+                            <a href="booking.html" class="btn btn-primary">Book Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="card text-center">
+                        <div class="card-header bg-success text-white">
+                            <h3>Premium Package</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">$800</h4>
+                            <ul class="list-unstyled">
+                                <li>Up to 8 hours of service</li>
+                                <li>Customized script</li>
+                                <li>Professional sound system</li>
+                                <li>Multilingual support</li>
+                            </ul>
+                            <a href="booking.html" class="btn btn-success">Book Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="card text-center">
+                        <div class="card-header bg-warning text-dark">
+                            <h3>Deluxe Package</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">$1200</h4>
+                            <ul class="list-unstyled">
+                                <li>Full-day service</li>
+                                <li>Customized script</li>
+                                <li>High-end sound system</li>
+                                <li>Multilingual support</li>
+                                <li>Pre-event consultation</li>
+                            </ul>
+                            <a href="booking.html" class="btn btn-warning">Book Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- MC Testimonials Section -->
     <section class="mc-testimonials">
         <div class="container">
@@ -188,6 +259,57 @@
                     <div class="testimonial-card">
                         <p>"Our guests are still talking about how amazing the MC was. Highly recommend!"</p>
                         <p class="text-end"><strong>- Laura & David</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- MC Gallery Section -->
+    <section class="mc-gallery py-5">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Gallery</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <img src="/frontend/allpack/mc/mcdata/ran1.jpg" class="img-fluid rounded" alt="MC Image 1">
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(14).jpg" class="img-fluid rounded" alt="MC Image 2">
+                </div>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <img src="/frontend/allpack/mc/mcdata/mc.jpg" class="img-fluid rounded" alt="MC Image 3">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- MC FAQ Section -->
+    <section class="mc-faq py-5">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Frequently Asked Questions</h2>
+            <div class="accordion" id="faqAccordion">
+                <div class="accordion-item" data-aos="fade-up" data-aos-delay="100">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What is included in the MC service?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Our MC service includes a customized script, professional hosting, and coordination with your event timeline.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item" data-aos="fade-up" data-aos-delay="200">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Can the MC speak multiple languages?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Yes, our MC is fluent in English, Spanish, and French.
+                        </div>
                     </div>
                 </div>
             </div>
@@ -228,6 +350,11 @@
         </div>
     </footer>
 
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="btn btn-primary btn-lg back-to-top" title="Go to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script
@@ -245,6 +372,29 @@
         AOS.init({
             duration: 1000,
             once: true,
+        });
+
+        // Back to Top Button
+        window.onscroll = function() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("backToTop").style.display = "block";
+            } else {
+                document.getElementById("backToTop").style.display = "none";
+            }
+        };
+        document.getElementById("backToTop").addEventListener("click", function() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        });
+
+        // Smooth Scrolling
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
         });
     </script>
 </body>
